# koffice-plugins

./: CMakeLists.txt
colors/: CMakeLists.txt  Messages.sh  Plugin.cpp  Plugin.h  kofficecolorsdocker.desktop
colors/docker/: ColorChooser.cpp  ColorChooser.h  ColorPicker.cpp  ColorPicker.h  Docker.cpp  Docker.h  DockerFactory.cpp  DockerFactory.h  GradientChooser.cpp  GradientChooser.h  GradientEditor.cpp  GradientEditor.h  GradientEditor.ui  GradientStopsEditor.cpp  GradientStopsEditor.h  LineStrokes.cpp  LineStrokes.h  LineStrokes.ui  LineStyleItemDelegate.cpp  LineStyleItemDelegate.h  LineStyleModel.cpp  LineStyleModel.h  LineStyleSelector.cpp  LineStyleSelector.h  PatternChooser.cpp  PatternChooser.h  PatternChooser.ui  SelectorWidget.cpp  SelectorWidget.h  SelectorWidget.ui  StrokeFillSelector.cpp  StrokeFillSelector.h  XYColorSelector.cpp  XYColorSelector.h
divineProportion/: CMakeLists.txt  DivineProportionPlugin.cpp  DivineProportionShape.cpp  DivineProportionShape.h  DivineProportionShapeFactory.cpp  DivineProportionShapeFactory.h  DivineProportionTool.cpp  DivineProportionTool.h  DivineProportionToolFactory.cpp  DivineProportionToolFactory.h  Intro.cpp  Intro.h  divineproportionshape.desktop
paragraphtool/: CMakeLists.txt  ParagraphBase.cpp  ParagraphBase.h  ParagraphEditor.cpp  ParagraphEditor.h  ParagraphFragment.cpp  ParagraphFragment.h  ParagraphHighlighter.cpp  ParagraphHighlighter.h  ParagraphPlugin.cpp  ParagraphTool.cpp  ParagraphTool.h  ParagraphToolFactory.cpp  ParagraphToolFactory.h  Ruler.cpp  Ruler.h  paragraphtool.desktop
pluginshape/: CMakeLists.txt  Plugin.cpp  PluginShape.cpp  PluginShape.h  PluginShapeFactory.cpp  PluginShapeFactory.h  pluginshape.desktop
simpletextedit/: CMakeLists.txt  Factory.cpp  Factory.h  Panel.cpp  Panel.h  Plugin.cpp  Plugin.h  kofficesimpletextedit.desktop
textediting/autocorrection/: Autocorrect.cpp  Autocorrect.h  AutocorrectFactory.cpp  AutocorrectFactory.h  AutocorrectPlugin.cpp  CMakeLists.txt  autocorrect.desktop
textediting/changecase/: CMakeLists.txt  Changecase.h  ChangecaseFactory.cpp  ChangecaseFactory.h  ChangecasePlugin.cpp  changecase.desktop
textediting/spellcheck/: BgSpellCheck.cpp  CMakeLists.txt  SpellCheck.cpp  SpellCheck.h  SpellCheckFactory.cpp  SpellCheckFactory.h  SpellCheckPlugin.cpp  spellcheck.desktop
textediting/spellcheck/tests/: CMakeLists.txt  TestSpellCheck.cpp
textediting/thesaurus/: CMakeLists.txt  Thesaurus.h  ThesaurusFactory.cpp  ThesaurusFactory.h  ThesaurusPlugin.cpp  thesaurustool.desktop
variabledocker/: CMakeLists.txt  variable_docker_factory.cpp  variable_docker_factory.h  variable_docker_plugin.cpp  variable_docker_plugin.desktop  variable_docker_plugin.h  variable_docker_widget.cpp  variable_docker_widget.h
